prevent horizontal scrolling

--- a/public/style.css
+++ b/public/style.css
@@ -10,5 +10,6 @@
 
 body {
   margin: 0;
-  color: var(--text)
+  color: var(--text);
+  overflow-x: hidden;
 }
